# python_github

./: Makefile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: publish.yaml  pytest.yaml
docs/: conf.py
python_github/: __init__.py  cli.py  github_object.py  issue.py  license.py  pull_request.py  python_github.py  workflow.py
tests/: test_python_github.py
